--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - dev
+      - main  # Add main branch to trigger deploy job
 
 jobs:
   build:
@@ -25,7 +26,7 @@ jobs:
         run: npm test
 
   deploy:
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -48,7 +49,7 @@ jobs:
         # Replace with your actual deployment script or commands
 
   notify:
-    if: github.event_name == 'push' && contains(github.ref, 'refs/heads/dev')
+    if: contains(github.ref, 'refs/heads/dev')
     runs-on: ubuntu-latest
 
     steps:
